Adding missing routes and creating tests for them.
